# scus

./: README.md  scatterer_visualisation.py
FieldII/: GenerateImage.py  Mat_field.mexw64  ParallelGenerate.py  field.m  field_init.m  make_image.m  mk_pht.m  saveEnv.m  scus_phantom.m  sim_img.m
MUST/: CMakeLists.txt  calcseqcorr.m  generate.m  generateImageFromScat.m  genscat.m  genscat_old.m  im2bmode.m  pfield.m  readme.md  resize.m  testcorr.m
settings/: readme-examples.md  settings_preview_projectedDICOM.json  settings_preview_tiltedCube.json  settings_simu_sphere.json
src/: Scus.h  main.cpp  settings_simu_sphere.json
src/geometry/: PSF.cpp  PSF.h  acquisitionZone.cpp  acquisitionZone.h  basicUS.cpp  basicUS.h  realScatMap.cpp  realScatMap.h  scatMap.cpp  scatMap.h
src/grid/: cell.cpp  cell.h  grid.cpp  grid.h
src/pointsets/: Domain.hpp  Histogram.hpp  Point.hpp  Pointset.hpp  Vector.hpp
src/samplers/: Sampler.h  SamplerCascadedSobol.h  SamplerDartThrowing.hpp  SamplerFactory.h  SamplerRegularGrid.hpp  SamplerUniformRandom.h
src/samplers/cascadedSobol/: OwenScrambling.h  Random.h  SobolGenerator1D.h
src/utility/: Diaphony.hpp  GeneralizedL2Discrepancy.hpp  L2Discrepancy.hpp  TestUtils.cpp  TestUtils.h  json.hpp  pointWriter.cpp  pointWriter.h  samplingUtils.hpp  stb_image_write.h  utils.h
src/volume/: cube.h  dicom.cpp  dicom.h  plane.h  sphere.h  weightingFactory.h  weightingFunction.h
